# datalab-app-plugin-profilometry

./: .copier-answers.yml  INSTALL.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: reference.md
src/datalab_app_plugin_profilometry/: __init__.py  _version.py  blocks.py  wyko_reader.py
tests/: __init__.py  test_datalab_app_plugin_profilometry.py
